Initial commit: CredLens V2 - Modular Architecture with button removed

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-venv/
-.DS_Store
-__pycache__/
+# .gitignore
+
+# 1. Ignore Secrets (CRITICAL)
 .streamlit/secrets.toml
+**/*.toml
+.env
+
+# 2. Ignore Python Cache (Junk files)
+__pycache__/
+*.pyc
+.DS_Store
+
+# 3. Ignore Virtual Environments
+venv/
+env/
+.venv/
